Fix overflow on ticket list

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1985,7 +1985,7 @@ a {
 .content {
   padding-top: 24px;
   margin-left: 300px;
-  overflow: auto;
+  overflow: inherit !important;
 }
 .comment {
   padding-left: 24px;
