--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -62,7 +62,7 @@ a{
 .content{
   .pt4;
   margin-left: @sidebar-width;
-  overflow:auto;
+  overflow: inherit !important;
 }
 
 .comment{
